[project]
name = "sendvolley-agent"
version = "0.1.0"
description = "Per-client SendVolley WhatsApp agent (FastAPI + Anthropic SDK)."
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "twilio>=9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sendvolley_agent"]
