[project]
name = "sendvolley-agent"
version = "0.1.0"
description = "Per-client SendVolley WhatsApp agent (FastAPI + Anthropic SDK)."
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "twilio>=9.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "anthropic>=0.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sendvolley_agent"]
